new portfolio piece

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <span class="date">02.23.2021</span>
         </div>
         <div class="entry padmin" style="background-color: #007fbc">
-          <video autoplay="true" nocontrols loop>
+          <video playsinline autoplay muted loop>
             <source
               src="img/experiments/ecom/portfolio-mockup-dapatio_1.mp4"
               type="video/mp4"
