--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎲</text></svg>"
     />
-    <title>Adam Howard - 2021 Prototypes</title>
+    <title>Adam Howard - 2021 Test</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
