--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="UX Designer focusing on Interaction and Visual Design"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="Adam Howard - UX Design">
+    <meta property="og:description" content="UX Designer focusing on Interaction and Visual Design">
+    <meta property="og:image" content="%PUBLIC_URL%/meta-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Adam Howard</title>
+    <title>Adam Howard - UX Design</title>
     <link rel="stylesheet" type="text/css" href="https://use.typekit.net/vpc0jqi.css" media=”screen” />
   </head>
   <body>
