--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,17 @@
     -->
     <title>Adam Howard - UX Design</title>
     <link rel="stylesheet" type="text/css" href="https://use.typekit.net/vpc0jqi.css" media=”screen” />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19173598-6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-19173598-6');
+    </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
