--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Adam Howard - UX Design</title>
-    <link rel="stylesheet" type="text/css" href="https://use.typekit.net/vpc0jqi.css" media=”screen” />
+    <!-- <link rel="stylesheet" href="https://use.typekit.net/vpc0jqi.css"> -->
+
+    <style>
+      @import url("https://use.typekit.net/vpc0jqi.css");
+    </style>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19173598-6"></script>
@@ -41,7 +45,7 @@
 
       gtag('config', 'UA-19173598-6');
     </script>
-    
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
