dusted off more

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       content="UX Designer focusing on Interaction and Visual Design"
     />
     <!--  Essential META Tags -->
-    <meta property="og:title" content="Adam Howard - UX Design">
-    <meta property="og:description" content="UX Designer focusing on Interaction and Visual Design">
+    <meta property="og:title" content="Adam Howard - Product Design">
+    <meta property="og:description" content="Product Designer focusing on the end-to-end process">
     <meta property="og:image" content="%PUBLIC_URL%/meta-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Adam Howard - UX Design</title>
+    <title>Adam Howard - Product Design</title>
     <!-- <link rel="stylesheet" href="https://use.typekit.net/vpc0jqi.css"> -->
 
     <style>
