copy tweaks to meta text

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="UX Designer focusing on Interaction and Visual Design"
+      content="Product Designer focused on the end-to-end process"
     />
     <!--  Essential META Tags -->
     <meta property="og:title" content="Adam Howard - Product Design">
-    <meta property="og:description" content="Product Designer focusing on the end-to-end process">
+    <meta property="og:description" content="Product Designer focused on the end-to-end process">
     <meta property="og:image" content="%PUBLIC_URL%/meta-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
