--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
       @import url("https://use.typekit.net/vpc0jqi.css");
     </style>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19173598-6"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-95HXG87PH8"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-19173598-6');
+      gtag('config', 'G-95HXG87PH8');
     </script>
 
   </head>
